[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/spike_line.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/gray.jpg" type="Texture" id=2]
[ext_resource path="res://assets/MartianMono-VariableFont_wdth,wght.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/border.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/game.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.5, 627.813 )

[sub_resource type="DynamicFont" id=2]
size = 17
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[node name="game" type="Node2D"]
script = ExtResource( 5 )
agent_count = 100
fittest = 5

[node name="spike_line2" parent="." instance=ExtResource( 1 )]
position = Vector2( 459, 18 )
rotation = 3.14159
scale = Vector2( 0.8, 0.5 )

[node name="spike_line3" parent="." instance=ExtResource( 1 )]
position = Vector2( 19, 728 )
rotation = 6.28319
scale = Vector2( 0.8, 0.5 )

[node name="border" parent="." instance=ExtResource( 4 )]
position = Vector2( -52, 459 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( -51, 412 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 37.5, 122.188 )
shape = SubResource( 1 )

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2( 478, 414 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2( 16, 66.125 )
shape = SubResource( 1 )

[node name="Gray" type="Sprite" parent="."]
position = Vector2( -58, 368 )
z_index = -1
texture = ExtResource( 2 )

[node name="scoreholder" type="Node2D" parent="."]
position = Vector2( 4, 46 )
z_index = 2

[node name="Label" type="Label" parent="scoreholder"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_right = 353.0
margin_bottom = 33.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "Generation :  , best streak : "

[node name="Label2" type="Label" parent="scoreholder"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 33.0
margin_right = 121.0
margin_bottom = 66.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "esc to quit"

[node name="menuholder" type="Node2D" parent="."]
z_index = 3

[node name="Control" type="Control" parent="menuholder"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 4 )

[node name="ColorRect" type="ColorRect" parent="menuholder/Control"]
margin_right = 478.0
margin_bottom = 749.0
color = Color( 0.0196078, 0.00392157, 0.0745098, 1 )

[node name="Button" type="Button" parent="menuholder/Control"]
margin_left = 129.0
margin_top = 317.0
margin_right = 357.0
margin_bottom = 347.0
text = "Train"

[node name="Button2" type="Button" parent="menuholder/Control"]
margin_left = 129.0
margin_top = 377.0
margin_right = 357.0
margin_bottom = 407.0
text = "Play trained"

[connection signal="area_entered" from="border" to="." method="_on_border_area_entered"]
[connection signal="pressed" from="menuholder/Control/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="menuholder/Control/Button2" to="." method="_on_Button2_pressed"]
